--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@radix-ui/react-dialog": "^1.1.7",
     "@radix-ui/react-dropdown-menu": "^2.1.7",
     "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-popover": "^1.1.10",
     "@radix-ui/react-scroll-area": "^1.2.4",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.3",
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-switch": "^1.1.4",
     "@radix-ui/react-tabs": "^1.1.3",
-    "@radix-ui/react-toast": "^1.2.7",
+    "@radix-ui/react-toast": "^1.2.10",
     "@radix-ui/themes": "^3.2.0",
     "ai": "^4.3.5",
     "bcrypt": "^5.1.1",
@@ -32,6 +33,7 @@
     "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.482.0",
     "modelfusion": "^0.137.0",
     "next": "15.1.6",
@@ -39,6 +41,7 @@
     "next-themes": "^0.4.6",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "react": "^19.0.0",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-icons": "^5.5.0",
